samples/_failures_safe/1761354565_6dd03d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29465679.c: In function ‘main’:
./samples/SAFE/__tmp_29465679.c:155:18: error: ‘add_log’ undeclared (first use in this function)
  155 |             if (!add_log
      |                  ^~~~~~~
./samples/SAFE/__tmp_29465679.c:155:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_29465679.c:155:25: error: expected ‘)’ at end of input
  155 |             if (!add_log
      |                ~        ^
      |                         )
./samples/SAFE/__tmp_29465679.c:155:13: error: expected declaration or statement at end of input
  155 |             if (!add_log
      |             ^~
./samples/SAFE/__tmp_29465679.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29465679.c:155:13: error: expected declaration or statement at end of input
